package com.changeops.changeservice.domain.valueobject;

public enum ChangeStatus {
    DRAFT,
    PREPARED,
    COMPLETED,
    FAILED,
    CANCELLED
}
